fix: no overlap organization module

--- a/src/features/search/SelectedEnhetPanel.module.scss
+++ b/src/features/search/SelectedEnhetPanel.module.scss
@@ -4,6 +4,7 @@
   max-width: 507px;
   padding-left: var(--ds-size-8);
   border-left: 1px solid var(--ds-color-neutral-border-subtle);
+  text-align: left;
 }
 
 .heading {
