--- a/src/features/search/searchresult/searchResultStyles.scss
+++ b/src/features/search/searchresult/searchResultStyles.scss
@@ -3,13 +3,14 @@
 }
 
 .search-result {
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
   align-items: flex-start;
   padding-bottom: var(--ds-size-13);
 
   >a {
-    display: inline-block;
+    display: block;
+    width: 100%;
     text-decoration: none;
 
     :hover {
@@ -18,9 +19,7 @@
   }
 
   h2 {
-    width: 941px;
-    flex-shrink: 0;
-
+    width: 100%;
     color: var(--ds-color-text-subtle);
     font-family: var(--ds-font-family);
     font-size: 21px;
@@ -28,11 +27,9 @@
     font-weight: 500;
     line-height: 150%;
 
-    position: relative;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    color: var(--ds-color-text-subtle);
   }
 }
 
@@ -40,32 +37,31 @@
   display: flex;
   flex-direction: column;
   gap: var(--ds-size-3);
-  padding-top: var(--ds-size-4); //Skal egt være var(--ds-size-5)? Ser mer korrekt ut med 3 
+  padding-top: var(--ds-size-4);
 }
 
 .search-result-dot {
   display: inline-block;
   flex: none;
-  width: 1rem;
-  height: 1rem;
+  width: 0.75rem;
+  height: 0.75rem;
   border-radius: 9999px;
-  border: 1px solid var(--ds-color-text-subtle);
 }
 
 .search-result-dot--saksmappe {
-  background: #EDC567;
+  background: var(--ds-color-support-color-3-base-primary);
 }
 
 .search-result-dot--journalpost {
-  background: #009BFD;
+  background: var(--ds-color-support-color-4-base-primary);
 }
 
 .search-result-dot--moetemappe {
-  background: #D0A9F6;
+  background: var(--ds-color-brand2-base-primary);
 }
 
 .search-result-dot--moetesak {
-  background: #8FC997;
+  background: var(--ds-color-support-color-5-base-primary);
 }
 
 .search-result-subheader {
@@ -173,4 +169,9 @@
     text-decoration: underline;
     color: var(--ds-color-neutral-text-default);
   }
+}
+
+.container-wrapper > .container-post {
+  justify-content: flex-start;
+  text-align: left;
 }
